<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item        android:id="@+id/bottom_nav_home"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:icon="@drawable/ic_home"        android:title="@string/home" />    <item        android:id="@+id/bottom_nav_library"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:icon="@drawable/ic_library"        android:iconTint="@color/colorLight"        android:title="@string/library" />    <item        android:id="@+id/bottom_nav_add_new"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:icon="@drawable/ic_add"

        android:iconTint="@color/colorLight"        android:title="@string/add_new" />    <item        android:id="@+id/bottom_nav_your_library"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:icon="@drawable/ic_your_library"        android:iconTint="@color/colorLight"        android:title="@string/your_library" />    <item        android:id="@+id/bottom_nav_profile"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:icon="@drawable/ic_profile"        android:iconTint="@color/colorLight"        android:title="@string/profile" /></menu>